force-app/main/default/objects/Previous_Interaction__c/Previous_Interaction__c.object-meta.xml
<CustomObject>
    <description>Previous Interactions between this account and customer service</description>
    <label>Previous Interaction</label>
    <nameField>
        <label>Previous Interactions Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Previous Interactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>