force-app/main/default/objects/Previous_Interaction__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Previous interactions associated with the account</description>
    <inlineHelpText>Previous interactions associated with the account</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Previous Interactions</relationshipLabel>
    <relationshipName>Previous_Interactions</relationshipName>
    <type>Lookup</type>
</CustomField>