force-app/main/default/objects/Previous_Interaction__c/fields/Actor__c.field-meta.xml
<CustomField>
    <fullName>Actor__c</fullName>
    <description>Actor / Teammate handled the interaction</description>
    <inlineHelpText>Actor / Teammate handled the interaction</inlineHelpText>
    <label>Actor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>