force-app/main/default/objects/Previous_Interaction__c/fields/Case_Id__c.field-meta.xml
<CustomField>
    <fullName>Case_Id__c</fullName>
    <description>Case Id for the previous interaction</description>
    <inlineHelpText>Case Id for the previous interaction</inlineHelpText>
    <label>Case Id</label>
    <length>64</length>
    <type>Text</type>
</CustomField>