force-app/main/default/objects/Previous_Interaction__c/fields/Channel_Id__c.field-meta.xml
<CustomField>
    <fullName>Channel_Id__c</fullName>
    <description>Unique identifier associated with the Channel - like UCID for Phone, MMT chat interaction id for chat and so on.</description>
    <inlineHelpText>Unique identifier associated with the Channel</inlineHelpText>
    <label>Channel Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>