force-app/main/default/objects/Previous_Interaction__c/fields/Channel_Name__c.field-meta.xml
<CustomField>
    <fullName>Channel_Name__c</fullName>
    <description>Channel Name - It could be Phone / Chat / Email / Followup / etc.,</description>
    <inlineHelpText>Channel Name - It could be Phone / Chat / Email / Followup / etc.,</inlineHelpText>
    <label>Channel Name</label>
    <length>64</length>
    <type>Text</type>
</CustomField>