force-app/main/default/objects/Previous_Interaction__c/fields/Contact_Reason__c.field-meta.xml
<CustomField>
    <fullName>Contact_Reason__c</fullName>
    <description>Contact Reason recorded in the system</description>
    <inlineHelpText>Contact Reason recorded in the system</inlineHelpText>
    <label>Contact Reason</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>