force-app/main/default/objects/Previous_Interaction__c/fields/Followup_Date__c.field-meta.xml
<CustomField>
    <fullName>Followup_Date__c</fullName>
    <description>Date to follow-up in case this case identifies a follow-up</description>
    <inlineHelpText>Date to follow-up in case this case identifies a follow-up</inlineHelpText>
    <label>Followup Date</label>
    <type>DateTime</type>
</CustomField>