force-app/main/default/objects/Previous_Interaction__c/fields/Followup_Reason__c.field-meta.xml
<CustomField>
    <fullName>Followup_Reason__c</fullName>
    <description>Reason for following up</description>
    <inlineHelpText>Reason for following up</inlineHelpText>
    <label>Followup Reason</label>
    <length>2048</length>
    <type>LongTextArea</type>
</CustomField>