force-app/main/default/objects/Previous_Interaction__c/fields/Has_Followup__c.field-meta.xml
<CustomField>
    <fullName>Has_Followup__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this interaction has a follow-up scheduled?</description>
    <inlineHelpText>Is this interaction has a follow-up scheduled?</inlineHelpText>
    <label>Has Followup</label>
    <type>Checkbox</type>
</CustomField>