force-app/main/default/objects/Previous_Interaction__c/fields/Parent_Case_Id__c.field-meta.xml
<CustomField>
    <fullName>Parent_Case_Id__c</fullName>
    <description>Case id of the parent in case these two cases are linked. This is applicable in scenarios like followups.</description>
    <inlineHelpText>Case id of the parent in case these two cases are linked</inlineHelpText>
    <label>Parent Case Id</label>
    <length>64</length>
    <type>Text</type>
</CustomField>