force-app/main/default/objects/Previous_Interaction__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Status - New / In Progress / Closed / Paused / etc.,</description>
    <inlineHelpText>Status - New / In Progress / Closed / Paused / etc.,</inlineHelpText>
    <label>Status</label>
    <length>64</length>
    <type>Text</type>
</CustomField>