force-app/main/default/objects/Previous_Interaction__c/fields/Time_Completed__c.field-meta.xml
<CustomField>
    <fullName>Time_Completed__c</fullName>
    <description>Time the Interaction is completed</description>
    <inlineHelpText>Time the Interaction is completed</inlineHelpText>
    <label>Time Completed</label>
    <type>DateTime</type>
</CustomField>