force-app/main/default/objects/Previous_Interaction__c/fields/Time_Started__c.field-meta.xml
<CustomField>
    <fullName>Time_Started__c</fullName>
    <description>Time the Interaction started</description>
    <inlineHelpText>Time the Interaction started</inlineHelpText>
    <label>Time Started</label>
    <type>DateTime</type>
</CustomField>